--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   camera: ^0.9.4+5
   flutter_form_builder: ^7.0.0
   firebase_storage: ^10.2.5
+  firebase_auth: ^3.3.5
 
 dev_dependencies:
   flutter_test:
